[gd_scene load_steps=8 format=3 uid="uid://cl44p1nonhrjm"]

[ext_resource type="Script" path="res://Scripts/collectables/xp_orb.gd" id="1_l1iq7"]
[ext_resource type="Texture2D" uid="uid://xahpjap1yywd" path="res://Sprites/Collectables/xp_orb.png" id="2_e880l"]
[ext_resource type="AudioStream" uid="uid://bf21sk8suxhhl" path="res://Sfx/coin-collect-retro-8-bit-sound-effect-145251.mp3" id="3_mtq2k"]

[sub_resource type="Animation" id="Animation_28fu7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_apn3k"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3stm"]
_data = {
"RESET": SubResource("Animation_28fu7"),
"idle": SubResource("Animation_apn3k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xjdup"]
radius = 8.0

[node name="xp_orb" type="Node2D"]
script = ExtResource("1_l1iq7")

[node name="xp_sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_e880l")
offset = Vector2(1.3, 1.3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="xp_sprite"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_e3stm")
}

[node name="xp_orb_area" type="Area2D" parent="."]
visible = false
position = Vector2(-1, -1)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="xp_orb_area"]
shape = SubResource("CircleShape2D_xjdup")

[node name="collected_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mtq2k")
volume_db = -10.0

[connection signal="body_entered" from="xp_orb_area" to="." method="_on_xp_orb_area_body_entered"]
